src/components/Tictactoe/MovesHistory/MovesHistory.css
/* Container for the history */
#moves-history {
    padding: 10px;
    border: 1px solid #ddd;
    border-radius: 5px;
    background-color: #fafafa;
    display: flex;
    flex-direction: column;
    flex-grow: 1; /* Container takes up all available space */
    overflow-y: auto; /* Adds vertical scrolling */
}

/* Container for the sorting bar */
#moves-history .sort-bar-container {
    margin: 10px 0;
    padding: 10px;
    background-color: #e6f7ff;
    border-radius: 5px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

/* Container for the list */
.moves-container {
    flex: 1; /* List takes up all available space */
    overflow-y: auto; /* Adds vertical scrolling */
}

/* Locking the display of move history */
.moves-container.locked-element {
    position: relative; /* Ensures that the overlay is positioned correctly */
}

.moves-container.locked-element::before {
    opacity: 1;
    z-index: 2; /* Ensures the element is above other elements */
    background-color: #d3d3d3;
}

/* Styles for vertical scrollbar */
.moves-container::-webkit-scrollbar {
    width: 8px; /* Scrollbar width */
}

.moves-container::-webkit-scrollbar-thumb {
    background-color: #ccc; /* Scrollbar color */
    border-radius: 4px;
}

.moves-container::-webkit-scrollbar-thumb:hover {
    background-color: #999; /* Scrollbar color on hover */
}

.moves-container::-webkit-scrollbar-track {
    background-color: #f1f1f1; /* Background color for the scroll track */
}

/* Styling for the list */
#moves-history ol {
    list-style: none; /* Removes list markers */
    counter-reset: history-counter; /* Resets the counter */
    padding: 0;
    margin: 0;
}

/* Styling for list item */
.moves-container li {
    margin: 0.5rem 0; /* Spacing between list items */
    counter-increment: history-counter; /* Increments the counter for each item */
    position: relative;
    background-color: #f9f9f9;
    padding: 1rem 1rem 1rem 3.5rem; /* Padding for list items */
    border-radius: 5px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); /* Light shadow styling */
    transition: background-color 0.3s ease, transform 0.1s ease; /* Hover effects */
    text-align: left; /* Aligns text to the left */
}

/* Hover animation */
.moves-container li:hover {
    background-color: #e6f7ff;
    transform: scale(1.02); /* Slight scaling on hover */
}

/* Position and size of the counter */
.moves-container li::before {
    position: absolute;
    display: flex;
    justify-content: center;
    width: var(--size); /* Responsive size of the counter */
    height: var(--size);
    --size: 2rem;
    left: 0.5rem; /* Counter spacing */
    top: 50%; /* Vertically centers the counter */
    content: counter(history-counter); /* Displays the counter value */
    font-size: 1rem;
    font-weight: bold;
    transform: translateY(-50%); /* Vertical centering */
    background-color: #1890ff; /* Counter background color */
    color: white;
    border-radius: 50%; /* Circular shape */
    align-items: center;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Light shadow styling */
}

/* Active move */
.moves-container li.selected {
    background-color: #32CD32;
    color: white;
}

/* Active counter */
.moves-container li.selected::before {
    background-color: #006400;
}

/* Move coordinates */
.move-coords {
    font-style: italic;
    color: #757575;
}

/* Additional style for DefaultMove link */
.moves-container li a {
    text-decoration: none; /* No underline for links */
    color: #007bff;
    font-weight: bold;
    transition: color 0.2s ease; /* Color transition on hover */
}

.moves-container li a:hover {
    color: #0056b3;
}

